[FIX] wrong z-index across

--- a/registration/static/registration/css/main.css
+++ b/registration/static/registration/css/main.css
@@ -210,6 +210,7 @@ li {
 }
 
 .top-header-container {
+  z-index: 99;
   width: 100%;
   background-color: red;
   position: fixed;
